--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   	// Visit https://aka.ms/tsconfig to read more about this file
 	"compilerOptions": {
-		// File Layout
-		// "rootDir": "./src",
-		// "outDir": "./dist",
+		"rootDir": "./src",
+		"outDir": "./dist",
 
 		// Environment Settings
 		// See also https://aka.ms/tsconfig/module
-		"module": "nodenext",
-		"target": "esnext",
+		"module": "commonjs",
+		"target": "es2020",
 		"lib": ["esnext"],
 		"types": ["node"],
-		"moduleResolution": "nodenext",
+		"moduleResolution": "node",
+		"esModuleInterop": true,
 
 		// Other Outputs
 		"sourceMap": true,
@@ -33,7 +33,7 @@
 		// Recommended Options
 		"strict": true,
 		"jsx": "react-jsx",
-		"verbatimModuleSyntax": true,
+		// "verbatimModuleSyntax": true,
 		"isolatedModules": true,
 		"noUncheckedSideEffectImports": true,
 		"moduleDetection": "force",
