--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanner-intercept",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "bin": "dist/index.js",
@@ -12,8 +12,12 @@
   },
   "pkg": {
     "scripts": "dist/**/*.js",
-    "assets": ["node_modules/@serialport/bindings-cpp"],
-    "targets": ["node22-win-x64"]
+    "assets": [
+      "node_modules/@serialport/bindings-cpp"
+    ],
+    "targets": [
+      "node22-win-x64"
+    ]
   },
   "keywords": [],
   "author": "",
