--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "assets": [
       "node_modules/@serialport/bindings-cpp"
     ],
+    "ignore": [
+      "db.json",
+      "constants.js"
+    ],
     "targets": [
       "node22-win-x64"
     ]
