--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - name: Rename files before build
+        run: |
+          mv constants.example.js constants.js
+          mv db.example.json db.json
 
       - name: Build executable
         run: npm run pkg
