fix: use cors and rename key to timestamp

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@serialport/parser-readline": "^13.0.0",
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-ws": "^5.0.2",
     "serialport": "^13.0.0"
